<resources>
    <string name="app_name">MembersOfParliamentApp</string>
    <string name="list_member_party">PRT</string>
    <string name="list_member_name">Edustaja Edustajainen</string>
    <string name="member_name">Member Name</string>
    <string name="member_constituency">Constituency</string>
    <string name="member_age">Age</string>
    <string name="member_party">Party</string>
    <string name="member_title">Title</string>
    <string name="new_member_button">New member</string>
    <string name="years_old">%1$d years old</string>
    <string name="addPoint">+</string>
    <string name="deductPoint">-</string>
    <string name="party">Party</string>
    <string name="name">Name</string>
    <string name="filters">Filters</string>
    <string name="restore">Restore</string>
    <string name="ps">Perussuomalaiset</string>
    <string name="kd">Kristillisdemokraatit</string>
    <string name="kesk">Keskusta</string>
    <string name="kok">Kokoomus</string>
    <string name="liik">Liike Nyt</string>
    <string name="rkp">RKP</string>
    <string name="sd">Sosiaalidemokraatit</string>
    <string name="vihr">Vihreät</string>
    <string name="vas">Vasemmistoliitto</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="addNote">Add comment</string>
    <string name="notes">Comments</string>
    <string name="empty_note">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="comment">Comment</string>
    <string name="delete_image_cache">Delete cache</string>
    <string name="cache_size_placeholder">cache size: %1$sKB</string>
    <string name="delete_image">Delete image(s)</string>
    <string name="member_whole_name">%1$s %2$s</string>
    <string name="member_image_content_desc">Image of this member</string>
    <string name="hel">Helsinki</string>
    <string name="uusi">Uusimaa</string>
    <string name="vars">Varsinais-Suomi</string>
    <string name="sata">Satakunta</string>
    <string name="ahv">Ahvenanmaa</string>
    <string name="hame">Häme</string>
    <string name="pirk">Pirkanmaa</string>
    <string name="kaak">Kaakkois-Suomi</string>
    <string name="savo">Savo-Karjala</string>
    <string name="vaasa">Vaasa</string>
    <string name="keski">Keski-Suomi</string>
    <string name="oulu">Oulu</string>
    <string name="lappi">Lappi</string>
    <string name="constituency">Constituency</string>
</resources>