<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".screens.member_information.MemberInformationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_member"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="100dp"
            app:layout_constraintBottom_toTopOf="@+id/partyText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <RelativeLayout
            android:id="@+id/member_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/txt_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="50dp"
                android:hint="@string/member_title"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_title"
                android:layout_centerInParent="true"
                android:layout_marginTop="20dp"
                android:hint="@string/member_name"
                android:text=""
                android:textAlignment="center"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/txt_age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_name"
                android:layout_centerInParent="true"
                android:layout_marginTop="30dp"
                android:hint="@string/member_age"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_constituency"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txt_age"
                android:layout_centerInParent="true"
                android:layout_marginTop="40dp"
                android:hint="@string/member_constituency"
                android:text=""
                android:textAlignment="center"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:layout_marginBottom="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="64dp">

            <Button
                android:id="@+id/deductPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="30dp"
                android:text="@string/deductPoint" />

            <TextView
                android:id="@+id/pointView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:text="0"
                android:textAlignment="center"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/addPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="30dp"
                android:text="@string/addPoint" />

        </RelativeLayout>

        <TextView
            android:id="@+id/partyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_member_party"
            app:layout_constraintBottom_toTopOf="@+id/member_content"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAlignment="center"
            android:shadowColor="#000000"
            android:shadowDx="2.0"
            android:shadowDy="2.0"
            android:shadowRadius="1.6"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>